# ghc-software-foundations

./: .gitmodules  .travis.yml  LICENSE  README.md  cabal.haskell-ci  cabal.project  software-foundations.cabal
.github/workflows/: haskell-ci.yml
logical-foundations/: LICENSE  README.md  logical-foundations.cabal
logical-foundations/src/SF/LF/: Axiom.hs  Basics.hs  FunExt.hs  Imp.hs  ImpC.hs  IndPrinciples.hs  IndProp.hs  Induction.hs  Lists.hs  Logic.hs  Maps.hs  Poly.hs  ProofObjects.hs  Rel.hs  Tactics.hs
src/SF/: Axiom.hs  Basics.hs  Imp.hs  ImpC.hs  IndPrinciples.hs  IndProp.hs  Induction.hs  Lists.hs  Logic.hs  Maps.hs  Poly.hs  ProofObjects.hs  Rel.hs  Tactics.hs
verified-functional-algorithms/: LICENSE  README.md  verified-functional-algorithms.cabal
verified-functional-algorithms/src/SF/VFA/: Perm.hs
