name:                software-foundations
version:             0.1
synopsis:            The Software Foundations book, in GHC
description:         The Software Foundations book, in GHC.
homepage:            https://github.com/RyanGlScott/ghc-software-foundations
bug-reports:         https://github.com/RyanGlScott/ghc-software-foundations/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
copyright:           (C) 2018 Ryan Scott
stability:           Experimental
category:            Dependent Types
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.2

library
  exposed-modules:     SF.Basics
                       SF.Induction
                       SF.Lists
                       SF.Poly
                       SF.Tactics
                       SF.Logic
                       SF.IndProp
                       SF.Maps
                       SF.ProofObjects
                       SF.IndPrinciples
                       SF.Rel
  other-modules:       SF.Axiom
  build-depends:       base           >= 4.11  && < 4.12
                     , eliminators    >= 0.4.1 && < 0.5
                     , singletons     >= 2.4.1 && < 2.5
                     , singleton-nats >= 0.4.1 && < 0.5
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors
