name:                logical-foundations
version:             0.1
synopsis:            The first Software Foundations book, in GHC
description:         The first Software Foundations book, in GHC.
homepage:            https://github.com/RyanGlScott/ghc-software-foundations
bug-reports:         https://github.com/RyanGlScott/ghc-software-foundations/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
copyright:           (C) 2018-2019 Ryan Scott
stability:           Experimental
category:            Dependent Types
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5
                   , GHC == 8.8.1

source-repository head
  type:     git
  location: https://github.com/RyanGlScott/ghc-software-foundations
  subdir:   logical-foundations

library
  exposed-modules:     SF.LF.Basics
                       SF.LF.Induction
                       SF.LF.Lists
                       SF.LF.Poly
                       SF.LF.Tactics
                       SF.LF.Logic
                       SF.LF.IndProp
                       SF.LF.Maps
                       SF.LF.ProofObjects
                       SF.LF.IndPrinciples
                       SF.LF.Rel
                       SF.LF.Imp
                       SF.LF.ImpC
  other-modules:       SF.LF.Axiom
                       SF.LF.FunExt
  build-depends:       base           >= 4.12  && < 4.13
                     , eliminators    >= 0.5   && < 0.6
                     , singletons     >= 2.5   && < 2.6
                     , singleton-nats >= 0.4.2 && < 0.5
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Wno-unticked-promoted-constructors
