name:                verified-functional-algorithms
version:             0.1
synopsis:            The third Software Foundations book, in GHC
description:         The third Software Foundations book, in GHC.
homepage:            https://github.com/RyanGlScott/ghc-software-foundations
bug-reports:         https://github.com/RyanGlScott/ghc-software-foundations/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
copyright:           (C) 2019 Ryan Scott
stability:           Experimental
category:            Dependent Types
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.10.1

source-repository head
  type:     git
  location: https://github.com/RyanGlScott/ghc-software-foundations
  subdir:   verified-functional-algorithms

library
  exposed-modules:     SF.VFA.Perm
  build-depends:       base                >= 4.14 && < 4.15
                     , logical-foundations >= 0.1  && < 0.2
                     , singletons          >= 2.7  && < 2.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Wno-unticked-promoted-constructors
